--- a/end.html
+++ b/end.html
@@ -6,6 +6,6 @@
     <title>Kindly wait for your order.</title>
 </head>
 <body>
-<h1>WE ARE PROCESSING YOUR ORDER, PLEASE WAIT FOR THEM TO DELIVER.</h1>
+<h1>PROGRAM NY: ANDERSON JED</h1>
 </body>
 </html>
