--- a/nf.html
+++ b/nf.html
@@ -17,92 +17,92 @@
         <img src="images/icons/HDD_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>HARD DISK DRIVE</h1>
         <h3>Western Digital Caviar Blue</h3>
-        <h2>$300</h2>
+        <h2>$900</h2>
         <a href="hdd.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/cpu_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>CENTRAL PROCESSING UNIT</h1>
         <h3>Intel Core i5 - 13600K</h3>
-        <h2>$1,990</h2>
+        <h2>$5,290</h2>
         <a href="cpu.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>MOTHERBOARD</h1>
         <h3>ASUS Prime Z790-A</h3>
-        <h2>$2,400</h2>
+        <h2>$1,500</h2>
         <a href="mb.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/monitor_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>MONITOR</h1>
         <h3>ACER Predator XB273K</h3>
-        <h2>$3,400</h2>
+        <h2>$400</h2>
         <a href="monitor.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/keyboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>KEYBOARD</h1>
         <h3>Razer BlackWidow Chroma V3</h3>
-        <h2>$400</h2>
+        <h2>$150</h2>
         <a href="keyboard.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/mouse_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>MOUSE</h1>
         <h3>Logitech G502 Lightspeed</h3>
-        <h2>$400</h2>
+        <h2>$70</h2>
         <a href="mouse.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/speaker_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>SPEAKER</h1>
         <h3>Edifier R1280T Powered Bluetooth Speaker</h3>
-        <h2>$200</h2>
+        <h2>$100</h2>
         <a href="speaker.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/ram_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>RANDOM ACCESS MEMORY</h1>
         <h3>Corsair Vengeance LPX 16GB (2X8GB)</h3>
-        <h2>$2,400</h2>
+        <h2>$60</h2>
         <a href="ram.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/psu_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>POWER SUPPLY UNIT</h1>
         <h3>EVGA 550 GS, 80+ GOLD 3200MHz DDR4</h3>
-        <h2>$999</h2>
+        <h2>$80</h2>
         <a href="psu.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
-    <!--<div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
+    <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
-        <h1>MOTHERBOARD</h1>
-        <h3>ASUS Prime Z790-A</h3>
-        <h2>$2,400</h2>
-        <a href="mb.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
+        <h1>SYSTEM CASE</h1>
+        <h3>CORSAIR OBSIDIAN SERIES 7700</h3>
+        <h2>$200</h2>
+        <a href="case.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
-        <h1>MOTHERBOARD</h1>
-        <h3>ASUS Prime Z790-A</h3>
-        <h2>$2,400</h2>
-        <a href="mb.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
+        <h1>COOLER (CPU FAN)</h1>
+        <h3>NOCTUA NH-U14S TR4-SP3</h3>
+        <h2>$40</h2>
+        <a href="cooler.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
-        <h1>MOTHERBOARD</h1>
-        <h3>ASUS Prime Z790-A</h3>
-        <h2>$2,400</h2>
-        <a href="mb.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
+        <h1>FLASHDRIVE</h1>
+        <h3>SAMSUNG BAR PLUS 128GB</h3>
+        <h2>$25</h2>
+        <a href="flashdrive.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
         <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
-        <h1>MOTHERBOARD</h1>
-        <h3>ASUS Prime Z790-A</h3>
-        <h2>$2,400</h2>
-        <a href="mb.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
+        <h1>DATA CABLE</h1>
+        <h3>BELKIN USB-A TO USB-C</h3>
+        <h2>$10</h2>
+        <a href="data-cable.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
 </body>
 <script src="assets/config.js"></script>
