--- a/nf.html
+++ b/nf.html
@@ -77,28 +77,28 @@
         <a href="psu.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
-        <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
+        <img src="images/icons/case_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>SYSTEM CASE</h1>
         <h3>CORSAIR OBSIDIAN SERIES 7700</h3>
         <h2>$200</h2>
         <a href="case.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
-        <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
+        <img src="images/icons/cooler_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>COOLER (CPU FAN)</h1>
         <h3>NOCTUA NH-U14S TR4-SP3</h3>
         <h2>$40</h2>
         <a href="cooler.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
-        <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
+        <img src="images/icons/flashdrive_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>FLASHDRIVE</h1>
         <h3>SAMSUNG BAR PLUS 128GB</h3>
         <h2>$25</h2>
         <a href="flashdrive.html"><button style="height: 40px; margin-bottom: 20px; border: 2px solid black;">VIEW SPECIFICATIONS</button></a>
     </div><br>
     <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; width: auto; height: auto; background-color: lightgrey; border: 3px solid black; border-radius: 10px;">
-        <img src="images/icons/motherboard_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
+        <img src="images/icons/cable_icon.jpg" alt="" height="100px" width="100px" style="margin-top: 20px; border: 2px solid black;"><br>
         <h1>DATA CABLE</h1>
         <h3>BELKIN USB-A TO USB-C</h3>
         <h2>$10</h2>
