--- a/case.html
+++ b/case.html
@@ -9,10 +9,11 @@
 <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;justify-content: center; text-align: center; background-color: rgb(229, 229, 229);">
     <img src="images/icons/case_icon.jpg" alt="" style="border: 3px solid black; width: 300px; height: 300px;"><br>
     
-    <h1>SYSTEM CASE</h1>
+    <h1 id="revise">SYSTEM CASE</h1>
+    <h2 id="price">$200</h2>
 
     <form action="end.html">
-        <input type="submit" value="BUY NOW" style="width: 200px; height: 40px;">
+        <input id="buy" type="submit" value="BUY NOW" style="width: 200px; height: 40px;">
     </form>
         <br>
     <form action="nf.html">
@@ -21,7 +22,7 @@
 
     <h2>SPECIFICATIONS:</h2>
     <p style="font-size: larger;">
-        <b>CORSAIR OBSIDIAN SERIES 7700</b><br>
+        <b id="item">CORSAIR OBSIDIAN SERIES 7700</b><br>
         <b>DIMENSIONS: </b>580 x 235 x 550 mm<br>
         <b>MOTHERBOARD SUPPORT: </b>ATX, Micro-ATX, Mini-ITX<br>
         <b>MATERIALS: </b>Steel, Aluminum<br>
@@ -29,4 +30,56 @@
         <b>DRIVE BAYS: </b>4x 2.5", 4X 3.5"<br>
     </p>
 </body>
+<script>
+    document.getElementById('buy').addEventListener('click', function () {
+        var products = document.getElementById('item').innerText;
+        var revise = document.getElementById('revise').innerText;
+        var price = document.getElementById('price').innerText;
+        localStorage.setItem('product', JSON.stringify(products));
+        localStorage.setItem('revise', JSON.stringify(revise));
+        localStorage.setItem('price', JSON.stringify(price));
+    });
+</script>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SYSTEM CASE</title>
+    <link rel="shortcut icon" href="images/icons/case_icon.jpg" type="image/x-icon">
+</head>
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;justify-content: center; text-align: center; background-color: rgb(229, 229, 229);">
+    <img src="images/icons/case_icon.jpg" alt="" style="border: 3px solid black; width: 300px; height: 300px;"><br>
+    
+    <h1 id="revise">SYSTEM CASE</h1>
+    <h2 id="price">$200</h2>
+
+    <form action="end.html">
+        <input id="buy" type="submit" value="BUY NOW" style="width: 200px; height: 40px;">
+    </form>
+        <br>
+    <form action="nf.html">
+        <input type="submit" value="CANCEL" style="width: 200px; height: 40px;">
+    </form>
+
+    <h2>SPECIFICATIONS:</h2>
+    <p style="font-size: larger;">
+        <b id="item">CORSAIR OBSIDIAN SERIES 7700</b><br>
+        <b>DIMENSIONS: </b>580 x 235 x 550 mm<br>
+        <b>MOTHERBOARD SUPPORT: </b>ATX, Micro-ATX, Mini-ITX<br>
+        <b>MATERIALS: </b>Steel, Aluminum<br>
+        <b>COOLING: </b>3x 120mm fans (front), 2x 140mm fans (top)<br>
+        <b>DRIVE BAYS: </b>4x 2.5", 4X 3.5"<br>
+    </p>
+</body>
+<script>
+    document.getElementById('buy').addEventListener('click', function () {
+        var products = document.getElementById('item').innerText;
+        var revise = document.getElementById('revise').innerText;
+        var price = document.getElementById('price').innerText;
+        localStorage.setItem('product', JSON.stringify(products));
+        localStorage.setItem('revise', JSON.stringify(revise));
+        localStorage.setItem('price', JSON.stringify(price));
+    });
+</script>
 </html>
