--- a/end.html
+++ b/end.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kindly wait for your order.</title>
+    <title>RECEIPT CHECKING</title>
 </head>
-<body>
-<h1>PROGRAM NY: ANDERSON JED</h1>
+<body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;">
+<h1>CHECKOUT</h1>
+<br>
+<input type="submit" value="SAVE YOUR RECEIPT" onclick="saveReceipt();">
+<h2>FOLLOW THESE STEPS TO CHECKOUT YOUR ORDER!</h2>
+<h3 style="text-align: justify; margin-left: 30%;">
+    1. Save your receipt. <br>
+    2. Take a screenshot of your receipt. <br>
+    3. Visit <a href="https://www.facebook.com/profile.php?id=61570163506801">NetFreak.co</a> on Facebook. <br>
+    4. Send your screenshot. <br>
+    5. Wait for your order to be delivered. <br>
+</h3>
 </body>
+<script src="assets/config.js"></script>
 </html>
