--- a/end.html
+++ b/end.html
@@ -18,5 +18,20 @@
     5. Wait for your order to be delivered. <br>
 </h3>
 </body>
-<script src="assets/config.js"></script>
+<script>
+    function saveReceipt() {
+    var storedData =localStorage.getItem('userData');
+    var userData = JSON.parse(storedData);
+    var meow = localStorage.getItem('product');
+    var arf = localStorage.getItem('revise');
+    var price = localStorage.getItem('price');
+
+    const blob = new Blob(["Name: " + userData.name + "\nGrade/Section: " + userData.grsc + "\n\nOrder: " + meow + "(" + arf + ")\nPrice: " + price], {type: 'text/plain'});
+
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(blob);
+    link.download = 'receipt.txt';
+    link.click();
+}
+</script>
 </html>
